--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ Django==2.2.3
 djangorestframework==3.10.1
 idna==2.8
 Pillow==6.1.0
+psycopg2==2.8.3
 pytz==2019.1
 requests==2.22.0
 sqlparse==0.3.0
