--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,10 @@ python:
   - "3.7"
 install:
   - pip install -r requirements.txt
+services:
+  - postgresql
+before_script:
+  - psql -c 'CREATE USER tedx WITH PASSWORD '1234';'
+  - psql -c 'CREATE DATABASE tedx;' -U tedx
 script:
   - python manage.py test
