--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ install:
 services:
   - postgresql
 before_script:
-  - psql -c 'CREATE USER tedx WITH PASSWORD '1234';'
-  - psql -c 'CREATE DATABASE tedx;' -U tedx
+  - psql -c "CREATE USER tedx WITH PASSWORD '1234';"
+  - psql -c "CREATE DATABASE tedx;" -U tedx
 script:
   - python manage.py test
