--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,8 @@ install:
 services:
   - postgresql
 before_script:
-  - psql -c "CREATE USER tedx WITH PASSWORD '1234';"
-  - psql -c "CREATE DATABASE tedx;" -U tedx
+  - psql -c "CREATE USER tedx WITH PASSWORD '1234';" -U postgres
+  - psql -c "CREATE DATABASE tedx;" -U postgres
+  - psql -c "GRANT ALL PRIVILEGES ON DATABASE tedx TO tedx;" -U postgres
 script:
   - python manage.py test
