--- a/.travis.yml
+++ b/.travis.yml
@@ -10,5 +10,6 @@ before_script:
   - psql -c "CREATE USER tedx WITH PASSWORD '1234';" -U postgres
   - psql -c "CREATE DATABASE tedx;" -U postgres
   - psql -c "GRANT ALL PRIVILEGES ON DATABASE tedx TO tedx;" -U postgres
+  - psql -c "ALTER USER tedx CREATEDB;" -U postgres
 script:
   - python manage.py test
