--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
+Babel==2.7.0
 certifi==2019.6.16
 chardet==3.0.4
 Django==2.2.3
+django-phonenumber-field==3.0.1
 djangorestframework==3.10.1
 idna==2.8
+phonenumbers==8.10.15
 Pillow==6.1.0
 psycopg2==2.8.3
 pytz==2019.1
