--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ chardet==3.0.4
 coreapi==2.3.3
 coreschema==0.0.4
 Django==2.2.3
+django-cors-headers==3.2.0
 django-phonenumber-field==3.0.1
 djangorestframework==3.10.1
 drf-yasg==1.17.0
